tarot cards perpective scroll parallax bug on firefox hotfix

--- a/dev/import/styles/page-projects.scss
+++ b/dev/import/styles/page-projects.scss
@@ -697,6 +697,10 @@
             }
         }
 
+        html:not(.browserIsFirefox) & .comp {
+            transform-style: preserve-3d;
+        }
+
         .stack {
             flex-grow: 0;
             flex-shrink: 0;
